# skykatana

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
code/: example_hsc.ipynb  indepth_usage.ipynb  skykatana.py
data/hsc_aux/: box.reg.I.parquet  extended_sources.parquet  tracts_patches_W-AEGIS.parquet  tracts_patches_W-autumn.parquet  tracts_patches_W-hectomap.parquet  tracts_patches_W-spring.parquet  user_circs.txt  user_polys.txt
data/hscx_minispring_gal/: _common_metadata  _metadata  catalog_info.json  partition_info.csv  provenance_info.json
data/hscx_minispring_gal/Norder=4/Dir=0/: Npix=2814.parquet
data/hscx_minispring_gal/Norder=5/Dir=0/: Npix=2057.parquet  Npix=2058.parquet  Npix=6480.parquet
data/hscx_minispring_gal/Norder=5/Dir=10000/: Npix=11260.parquet  Npix=11261.parquet
data/hscx_minispring_gal/Norder=6/Dir=0/: Npix=8193.parquet  Npix=8205.parquet  Npix=8207.parquet  Npix=8227.parquet
data/hscx_minispring_gal/Norder=6/Dir=20000/: Npix=25917.parquet  Npix=25960.parquet  Npix=25962.parquet  Npix=25963.parquet  Npix=25967.parquet  Npix=25976.parquet  Npix=25977.parquet  Npix=25978.parquet  Npix=25979.parquet  Npix=25982.parquet  (+4 more)
docs/: api.md  intro.md  requirements.txt
example_data/: minispring.maskpipe
example_data/hsc_aux/: starboxes_iband.parquet  stars_iband.parquet  tracts_patches_minispring.parquet  user_polys.txt
example_data/hscx_minispring_gal/: _common_metadata  _metadata  catalog_info.json  provenance_info.json
notebooks/: indepth_usage.ipynb
src/skykatana/: __init__.py  skykatana.py
(+87 files in other folders)
