[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skykatana"
version = "0.1.3"
description = "Tookit to create sky masks in a pipeline way"
readme = "README.md"
authors = [{ name = "Emilio Donoso, ICATE-Conicet", email = "emiliodon@gmail.com" }]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"]
keywords = ["Astronomy", "Surveys", "Sky Masks"]

dependencies = [ "lsdb", "healsparse", "tqdm"]

requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/samotracio/skykatana"
Documentation = "https://skykatana.readthedocs.io/en/latest/"
Repository = "https://github.com/samotracio/skykatana"

